--- a/PandaConsole/PandaConsole.csproj
+++ b/PandaConsole/PandaConsole.csproj
@@ -44,6 +44,9 @@
     <Compile Include="SakaiSiteCollection.cs" />
     <Compile Include="PandaSite.cs" />
     <Compile Include="Shell\ShellSelection.cs" />
+    <Compile Include="SakaiResourceCollection.cs" />
+    <Compile Include="SakaiResource.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Shell\" />
