Ported to .NET Core 2.0

--- a/PandaConsole/PandaConsole.csproj
+++ b/PandaConsole/PandaConsole.csproj
@@ -1,53 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{142827FE-979D-4D09-A817-205565CCF894}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>PandaConsole</RootNamespace>
-    <AssemblyName>PandaConsole</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG;</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ExternalConsole>true</ExternalConsole>
-    <PlatformTarget>x86</PlatformTarget>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release</OutputPath>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ExternalConsole>true</ExternalConsole>
-    <PlatformTarget>x86</PlatformTarget>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Runtime.Serialization" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shell\ShellMethods.cs" />
-    <Compile Include="Shell\ShellSelection.cs" />
-    <Compile Include="Utilities.cs" />
-    <Compile Include="Sakai\SakaiResource.cs" />
-    <Compile Include="Sakai\SakaiResourceCollection.cs" />
-    <Compile Include="Sakai\SakaiSite.cs" />
-    <Compile Include="Sakai\SakaiSiteCollection.cs" />
-    <Compile Include="Sakai\SakaiUser.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Shell\" />
-    <Folder Include="Sakai\" />
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+
 </Project>
