--- a/AnnouncementNotifier/AnnouncementNotifier.csproj
+++ b/AnnouncementNotifier/AnnouncementNotifier.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\PandaLib\PandaLib.csproj" />
+  </ItemGroup>
+
 </Project>
