--- a/PandaConsole/PandaConsole.csproj
+++ b/PandaConsole/PandaConsole.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\PandaLib\PandaLib.csproj" />
   </ItemGroup>
 
