--- a/AnnouncementNotifier/AnnouncementNotifier.csproj
+++ b/AnnouncementNotifier/AnnouncementNotifier.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.23" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\PandaLib\PandaLib.csproj" />
   </ItemGroup>
