--- a/AnnouncementNotifier/AnnouncementNotifier.csproj
+++ b/AnnouncementNotifier/AnnouncementNotifier.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+    <PackageReference Include="Slack.Webhooks" Version="1.1.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
   </ItemGroup>
 
