--- a/AnnouncementNotifier/App.config
+++ b/AnnouncementNotifier/App.config
@@ -2,5 +2,6 @@
 <configuration>
   <appSettings>
     <add key="DbConnectionString" value="Server=(LocalDb)\MSSQLLocalDB;Database=AnnouncementNotifier;Integrated Security=True;"/>
+    <add key="SlackWebhookUrl" value=""/>
   </appSettings>
 </configuration>
