Use credential from the configuration file
If empty, user should enter id and password from console.

--- a/AnnouncementNotifier/App.config
+++ b/AnnouncementNotifier/App.config
@@ -3,5 +3,7 @@
   <appSettings>
     <add key="DbConnectionString" value="Server=(LocalDb)\MSSQLLocalDB;Database=AnnouncementNotifier;Integrated Security=True;"/>
     <add key="SlackWebhookUrl" value=""/>
+    <add key="EcsId" value=""/>
+    <add key="EcsPass" value=""/>
   </appSettings>
 </configuration>
